# RubikCube

./: .gitignore  CMakeLists.txt
src/: cube.cpp  cube.h  main.cpp
